change font for code block

--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -3,9 +3,9 @@
   <% if (theme.social) { %>
     <% _.forEach(theme.social, function(value, key) { %>
       <% if (value) { %>
-        · <a href="<%= url_for(value) %>" target="_blank" class="nav-icn"><%= key %></a>
+         <a href="<%= url_for(value) %>" target="_blank" class="nav-icn"><%= key %></a>
       <% } %>
     <% }); %>
   <% } %>
-  <span class="copyright"><%= theme.copyright %></span>
+  <span class="beian"><%= theme.beian %></span>
 </footer>
