modify some info

--- a/source/css/_partial/footer.scss
+++ b/source/css/_partial/footer.scss
@@ -4,8 +4,9 @@
   line-height: 22px;
   opacity: 0.8;
   color: #333;
+  text-align: center;
   .beian {
-    float: right;
+    text-align: center;
   }
   @media screen and (max-width: 800px){
     margin-top: 20px;
