--- a/source/css/global.scss
+++ b/source/css/global.scss
@@ -7,5 +7,5 @@ a {
 }
 
 body {
-  font-family: -apple-system, system-ui, "Helvetica Neue", "PingFang SC", "Microsoft YaHei", Consolas, "Source Han Sans SC", "Noto Sans CJK SC", "WenQuanYi Micro Hei", sans-serif;
+  font-family: "Microsoft YaHei", -apple-system, system-ui, "Helvetica Neue", "PingFang SC", Consolas, "Source Han Sans SC", "Noto Sans CJK SC", "WenQuanYi Micro Hei", sans-serif;
 }
