--- a/source/css/_partial/article.scss
+++ b/source/css/_partial/article.scss
@@ -18,8 +18,22 @@ $brand-color: #f0534e;
   }
   > .content {
     padding-bottom: 64px;
-    h1, h2, h3, h4, h5{
+    h1 {
       font-size:24px;
+      font-weight: 600;
+      line-height: 40px;
+      margin-bottom: 15px;
+    }
+
+    h2 {
+      font-size:21px;
+      font-weight: 600;
+      line-height: 40px;
+      margin-bottom: 15px;
+    }
+
+    h3, h4, h5{
+      font-size: 18px;
       font-weight: 600;
       line-height: 40px;
       margin-bottom: 15px;
