--- a/source/css/_partial/article.scss
+++ b/source/css/_partial/article.scss
@@ -49,12 +49,13 @@ $brand-color: #f0534e;
       font-family: Consolas;
       overflow: auto;;
       padding: 0;
+      margin-bottom: 15px;
       color: #333;
       background: #f8f8f8;
       .gutter {
         text-align: right;
         pre {
-          background-color: #f0f0f0;
+          background-color: #f8f8f8;
           padding: 0 10px;
         }
       }
